style.css
body {
    margin: 0;
    background-color: hsl(257, 40%, 49%);
    z-index: 0;
    position: relative;
}

.text {
    color: #eeeff2;
}

@media (max-width: 375px) {
    body {
        display: flex;
        flex-direction: column;
    }
    #left-col   {
        background-image: url(images/bg-mobile.svg);
        display: flex;
        flex-direction: column;
        justify-content: center;
        height: 50vh;
        padding-bottom: 10px;
    }
    #chatbubble {
        position: absolute;
        top: 60px;
        left: 75px;
    }

    h1 {
        font-family: 'Poppins', sans-serif;
        position: absolute;
        top: 25px;
        left: 115px;
        font-size: 25px;
        font-weight: 600;
    }
    #mock-up {
        width: 80%;
        height: 70%;
        position: relative;
        top: 60px;
        left: 40px;
        z-index: 12;
    }

    #right-col  {
        display: flex;
        flex-direction: column;
        height: 50vh;
    }
    h3 {
        font-family: 'Poppins', sans-serif;
        font-size: 23px;
        font-weight: 600;
        text-align: center;
        margin-bottom: 0;
        margin-top: 20px;
    }
    #motto {
        font-family: 'Open Sans', sans-serif;
        position: relative;
        top: 10px;
        font-size: 15px;
        font-weight: 400;
        line-height: 20px;
        text-align: center;
        padding: 0 20px 15px 20px;
        margin: 0 25px 0 25px;
    }

    #button {
        position: absolute;
        top: 560px;
        right: 100px;
        background-color: white;
        color: hsl(257, 40%, 49%);
        height: 30px;
        width: 190px;
        border-radius: 20px;
        font-size: 12px;
        font-family: 'Poppins', sans-serif;
        font-weight: 400;
        text-align: center;
        padding-top: 10px;
    }
    #socials {
        position: absolute;
        right: 140px;
        bottom: 10px;
        display: flex;
        flex-direction: row;
        justify-content: space-evenly;
    }
    .fa-xl  {
        height: 10px;
        width: 10px;
    }
    .fa-facebook-f  {
        color: #eeeff2;
    }
    #FB {
        height: 25px;
        width: 25px;
        border: 1px solid #eeeff2;
        border-radius: 50%;
        margin: 5px;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }
    .fa-twitter{
        color: #eeeff2;
    }
    #twitter {
        height: 25px;
        width: 25px;
        border: 1px solid #eeeff2;
        border-radius: 50%;
        margin: 5px;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }
    .fa-instagram   {
        color: #eeeff2;
    }
    #insta {
        height: 25px;
        width: 25px;
        border: 1px solid #eeeff2;
        border-radius: 50%;
        margin: 5px;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

}

@media (min-width: 1025px) {
    body {
        background-image: url(images/bg-desktop.svg);
    }

    #left-col {
        display: flex;
        flex-direction: column;
    }
    #chatbubble {
        position: absolute;
        top: 95px;
        left: 75px;
    }
    h1 {
        font-family: 'Poppins', sans-serif;
        position: absolute;
        top: 25px;
        left: 115px;
        font-size: 50px;
        font-weight: 600;
    }
    #mock-up {
        width: 45%;
        height: 60%;
        position: relative;
        top: 200px;
        left: 80px;
        z-index: 12;
    }

    #right-col {
        display: flex;
        flex-direction: column;
    }
    #h3 {
        font-family: 'Poppins', sans-serif;
        position: absolute;
        top: 200px;
        right: 180px;
        font-size: 40px;
        font-weight: 600;
        margin: 0;
    }
    #motto {
        font-family: 'Open Sans', sans-serif;
        position: absolute;
        top: 350px;
        right: 100px;
        font-size: 18px;
        font-weight: 400;
        line-height: 25px;
        margin: 0 20px 0 800px;
    }
    #button {
        position: absolute;
        top: 450px;
        right: 445px;
        background-color: white;
        color: hsl(257, 40%, 49%);
        height: 40px;
        width: 195px;
        border-radius: 30px;
        font-size: 18px;
        font-family: 'Poppins', sans-serif;
        font-weight: 400;
        text-align: center;
        padding-top: 15px;
    }
    #button:hover {
        background-color: hsl(300, 69%, 71%);
        color: #eeeff2;
        cursor: pointer;
    }

    #socials {
        position: absolute;
        right: 100px;
        bottom: -270px;
        display: flex;
        flex-direction: row;
        justify-content: space-evenly;
    }
    .fa-facebook-f {
        height: 40px;
        width: 40px;
        border: 1px solid #eeeff2;
        border-radius: 50%;
        margin: 5px;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        color: #eeeff2;
    }
    .fa-facebook-f:hover   {
        border-color: hsl(300, 69%, 71%);
        cursor: pointer;
        color: hsl(300, 69%, 71%);
    }
    .fa-twitter {
        height: 40px;
        width: 40px;
        border: 1px solid #eeeff2;
        border-radius: 50%;
        margin: 5px;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        color: #eeeff2;
    }
    .fa-twitter:hover  {
        border-color: hsl(300, 69%, 71%);
        color: hsl(300, 69%, 71%);
        cursor: pointer;
    }
    .fa-instagram {
        height: 40px;
        width: 40px;
        border: 1px solid #eeeff2;
        border-radius: 50%;
        margin: 5px;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        color: #eeeff2;
    }
    .fa-instagram:hover    {
        border-color: hsl(300, 69%, 71%);
        color: hsl(300, 69%, 71%);
        cursor: pointer;
    }
}

